syntax = "proto3";

option csharp_namespace = "Microsoft.Telepathy.EchoService";

package echo;

service Echoer {
  rpc Echo (EchoRequest) returns (EchoReply);
}

message EchoRequest {
  string message = 1;
}

message EchoReply {
  string message = 1;
}
